# BloogBot

./: .dockerignore  .editorconfig  .env  .gitattributes  .gitignore  .mcp.json  0.1  02_Params_And_State.md  08_Slope_Step_Ceiling_Rules.md  10_Parity_TestHarness.md  AGENTS.md  ARCHITECTURE.md  ARCHIVE.md  Build-ArchitectureCompatibleComponents.ps1  CLAUDE.md  CMakeLists.txt  CMakePresets.json  DEVELOPMENT_GUIDE.md  Directory.Build.props  Directory.Build.targets  IPC_COMMUNICATION.md  Log.txt  PROJECT_STRUCTURE.md  README.md  TASKS.md  WestworldOfWarcraft.sln  __tmp_trace.csx  acq_model.txt  analyze_transport.ps1  bcm_diag.txt  build-injection-dlls.bat  check_pe.ps1  check_servers.ps1  compose.yaml  copy_nav_dll.ps1  create_account.ps1  docker-compose.vmangos-linux.yml  docker-compose.windows.yml  down_pass_diag.txt  inst_bounds.txt  (+24 more)
.agent/: PLANS.md
.ai/: ORCHESTRATOR_NOTES.md  USAGE.md  codex-task.ps1  copilot-ask.ps1
.claude/: hooks.json  settings.local.json
.github/: CODEX_INSTRUCTIONS.md  CONTRIBUTING.md  COPILOT_CONTEXT.md  COPILOT_INSTRUCTIONS.md  copilot-instructions.md  pull_request_template.md
BackgroundBotRunner/: BackgroundBotWorker.cs
BloogBot.AI/: BloogBot.AI.csproj  CLAUDE.md  Dockerfile  HeuristicPicker.cs  KernelCoordinator.cs  README.md  TASKS.md
BotCommLayer/: ProtobufAsyncSocketServer.cs  ProtobufSocketClient.cs  ProtobufSocketServer.cs
BotProfiles/: BotProfiles.csproj  CLAUDE.md  PROFILE_TASK_MAP.md  README.md  TASKS.md  TASKS_ARCHIVE.md
BotRunner/: BotRunner.csproj  BotRunnerService.cs  Program.cs
Config/: CLAUDE.md  README.md
DecisionEngineService/: DecisionEngine.cs
Exports/: README.md  TASKS.md
Exports/FastCall/: CLAUDE.md  CMakeLists.txt  FastCall.vcxproj  FastCall.vcxproj.filters  README.md  dllmain.cpp  stdafx.h
Exports/FastCall/Debug/: FastCall.dll.recipe  vc143.idb
Exports/FastCall/Win32/Debug/: FastCall.dll.recipe  vc143.idb
Exports/FastCall/cmake_build_x86/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  FastCall.sln  FastCall.vcxproj  FastCall.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
Exports/FastCall/cmake_build_x86/Debug/: FastCall.exp  FastCall.lib
Exports/Loader/: CLAUDE.md  CMakeLists.txt  Loader.vcxproj  Loader.vcxproj.filters  README.md  TASKS.md  dllmain.cpp  minimal_loader.cpp  nethost_helpers.h  simple_loader.cpp  stdafx.cpp  test_minimal.cpp
Exports/Loader/Debug/: Loader.dll.recipe  vc143.idb
Exports/Loader/Release/: Loader.dll.recipe
Exports/Loader/Win32/Debug/: Loader.dll.recipe  vc143.idb
Exports/Navigation/: BIH.cpp  BIH.h  BIH.inl  CLAUDE.md  CMakeLists.txt  CapsuleCollision.h  CharacterCapsuleMover.cpp  CharacterCapsuleMover.h  CoordinateTransforms.h  CylinderCollision.cpp  CylinderCollision.h  DllMain.cpp  DynamicObjectRegistry.cpp  DynamicObjectRegistry.h  EngineShim.cpp  GroundedDriverParity.cpp  GroundedDriverParity.h  GroundedDriverParityTestExports.cpp  MapLoader.cpp  MapLoader.h  ModelInstance.cpp  ModelInstance.h  MoveMap.cpp  MoveMap.h  MoveMapSharedDefines.h  Navigation.cpp  Navigation.h  Navigation.vcxproj  Navigation.vcxproj.filters  PathFinder.cpp  PathFinder.h  PhysicsBridge.h  PhysicsCollideSlide.cpp  PhysicsCollideSlide.h  PhysicsDiagnosticsHelpers.cpp  PhysicsDiagnosticsHelpers.h  PhysicsEngine.cpp  PhysicsEngine.h  PhysicsGroundSnap.cpp  PhysicsGroundSnap.h  (+44 more)
Exports/Navigation/Detour/Include/: DetourPathCorridor.h
Exports/Navigation/Detour/Source/: DetourNavMesh.cpp  DetourNavMeshBuilder.cpp  DetourPathCorridor.cpp
Exports/Navigation/Win32Debug/: Navigation.dll.recipe
Exports/Physics/: CMakeLists.txt  Physics.vcxproj
PathfindingService.Tests/: PathingAndLOSTests.cs
RecordedTests.PathingTests/: IMPLEMENTATION_STATUS.md  Program.cs  README.md  RecordedTests.PathingTests.csproj  TASKS.md  TASKS_ARCHIVE.md
RecordedTests.Shared/: ArtifactPathHelper.cs  DefaultRecordedWoWTestDescription.cs  DelegateBotRunnerFactory.cs  DelegateScreenRecorderFactory.cs  DelegateServerDesiredState.cs  FileSystemRecordedTestStorage.cs  GmCommandExecutionResult.cs  GmCommandServerDesiredState.cs  LocalMangosDockerTrueNasAppsClient.cs  ObsRecorderStub.cs  RECORDED_TESTS_E2E_CHECKLIST.md  RecordedTestE2EConfiguration.cs  RecordedTestOrchestrator.cs  RecordedTestRunner.cs  TASKS.md  (+5 more)
Services/CppCodeIntelligenceMCP/: CMakeLists.txt  CppCodeIntelligenceMCP.csproj  Program.cs  README.md  TASKS.md  appsettings.json
Services/CppCodeIntelligenceMCP/Models/: CppModels.cs
Services/CppCodeIntelligenceMCP/Properties/: launchSettings.json
Services/CppCodeIntelligenceMCP/Services/: CppAnalysisService.cs  CppCodeIntelligenceMCPService.cs  CppProjectStructureService.cs  CppSemanticAnalyzer.cs
Services/CppCodeIntelligenceMCP/Tools/: CppAnalysisTools.cs
Services/CppCodeIntelligenceMCP/include/: code_intelligence.h
Services/CppCodeIntelligenceMCP/logs/: cppintelligence-20250905.txt  cppintelligence-20250905_001.txt  cppintelligence-20250906.txt  cppintelligence-20250907.txt  cppintelligence-20250908.txt
Services/CppCodeIntelligenceMCP/src/: ast_analyzer.cpp  compile_commands_parser.cpp  main.cpp  mcp_server.cpp  symbol_parser.cpp
tools/MmapGen/: .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  NOTICE.md  README.md  build-mmapgen.ps1  config.json  offmesh.txt  promote-mmaps.ps1
tools/MmapGen/contrib/mmap/src/: IntermediateValues.cpp  MapBuilder.cpp  MapBuilder.h  TerrainBuilder.cpp  TerrainBuilder.h  TileWorker.cpp  TileWorker.h  generator.cpp
tools/MmapGen/dep/recastnavigation/Detour/Source/: DetourNavMeshBuilder.cpp
tools/MmapGen/dep/recastnavigation/Recast/Include/: Recast.h  RecastAlloc.h
tools/MmapGen/dep/recastnavigation/Recast/Source/: RecastAssert.cpp  RecastContour.cpp  RecastMesh.cpp
tools/MmapGen/include/: BakeProfile.h
tools/MmapGen/src/game/: ObjectMgr.cpp
tools/MmapGen/src/stubs/: utf8printf_stub.cpp
tools/MmapGen/test-fixtures/: flamecrest-to-brm.json  og-zeppelin.json
tools/MmapGen/test-fixtures/recorded/: flamecrest-to-brm-recorded-20260510T181222Z.json  og-zeppelin-recorded-20260510T175156Z.json
(+3400 files in other folders)
